--- a/package.json
+++ b/package.json
@@ -2,19 +2,20 @@
   "name": "square-brackets",
   "version": "0.0.1",
   "license": "MIT",
-  "author": "Eric Bednarz <github@bednarz.nl>",
+  "author": "Eric Bednarz <ericbdnarz+npm@outlook.com>",
   "description": "Compact, lightweight and serializable HTML description syntax for server- and client-side ECMAScript.",
   "scripts": {
     "lint": "eslint .",
     "test": "mocha -w **/*_test.js"
   },
+  "respository": "github:ebednarz/square-brackets",
   "keywords": [],
   "dependencies": {
-    "commonmark": "^0.27.0"
+    "commonmark": "^0.29.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "eslint": "^3.12.2",
-    "mocha": "^3.2.0"
+    "chai": "^4.2.0",
+    "eslint": "^6.0.1",
+    "mocha": "^6.1.4"
   }
 }
